# linux-devmgmt

./: CMakeLists.txt  DeviceData.h  DeviceModel.cpp  DeviceModel.h  DeviceOps.cpp  DeviceOps.h  DevicePropertiesDialog.cpp  DevicePropertiesDialog.h  DeviceScanner.cpp  DeviceScanner.h  DeviceUtils.h  DriverDetailsDialog.cpp  DriverDetailsDialog.h  KnownDriverDates.h  MainWindow.cpp  MainWindow.h  README.md  SysfsScanner.cpp  SysfsScanner.h  UpdateDriverDialog.cpp  UpdateDriverDialog.h  flake.nix
src/: main.cpp
src/model/: DeviceModel.cpp  DeviceOps.cpp  DeviceOps.h  DeviceUtils.h
src/scanner/: DeviceScanner.cpp  SysfsScanner.cpp
src/ui/: DevicePropertiesDialog.cpp  DriverDetailsDialog.cpp  MainWindow.cpp  MainWindow.h  UpdateDriverDialog.cpp  UpdateDriverDialog.h
